=== 1.0.2 (2016-01-28)

* Add support for running with --enable-frozen-string-literal on ruby 2.3 (jeremyevans)

=== 1.0.1 (2015-01-27)

* Fix homepage in gemspec (jeremyevans) (#1)

=== 1.0.0 (2014-01-07)

* Initial Public Release