@@ -1,3 +1,7 @@
+=== master
+
+* Use cgi/escape if available for faster escaping (jeremyevans)
+
 === 1.0.2 (2016-01-28)
 
 * Add support for running with --enable-frozen-string-literal on ruby 2.3 (jeremyevans)
